--- a/css/styles.css
+++ b/css/styles.css
@@ -638,7 +638,16 @@ img {
 
 .footer-flex {
   display: flex;
+  /* justify-content: space-between; */
 }
+
+.block {
+  flex-basis: calc((50%-45px) / 2);
+}
+.block:last-child {
+  flex-basis: calc(50%-15px);
+}
+
 .footer-address {
   margin-right: 70px;
 }
@@ -666,16 +675,62 @@ img {
   background-color: var(--accent-color);
 }
 
-/* .join-container .social-icons-link:hover .icons,
-.join-container .social-icons-link:focus .icons {
-  fill: var(--primary-white-color);
-} */
-
 .join-container .social-icons-link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .join-container .social-icons-link .icons {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.email-container {
+  margin-left: 93px;
+}
+.form-footer {
+  display: flex;
+}
+
+.email-container .button.primary {
+  display: flex;
+  width: 200px;
+  height: 50px;
+
+  /* position: absolute; */
+  /* justify-content: center;
+  justify-items: center;
+  text-align: center; */
+}
+.email-container .icons {
+  margin-left: 10px;
+}
+.footer-input {
+  font-size: 16px;
+  line-height: 1.25;
+  padding: 15px 16px;
+  color: var(--primary-white-color);
+  height: 50px;
+  width: 358px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  margin-right: 12px;
+}
+.footer-input:focus {
+  outline: none;
+  border-color: var(--primary-white-color);
+}
+.footer-input:focus::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-input:-webkit-autifill,
+.footer-input:-webkit-autifill:hover,
+.footer-input:-webkit-autifill:focus {
+  -webkit-tex-fill-color: currentColor;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+}
+.footer-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
 }
 
 /* Модальное окно */
@@ -723,24 +778,37 @@ img {
   border-radius: 50%;
 }
 
-/* textarea {
-  resize: none;
-} */
+.close-back > .icons:hover {
+  /* .close-back > .icons:focus { */
+  fill: var(--accent-color);
+}
+.close-back > .icons {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-title {
+  margin-top: 40px;
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--primary-text-color);
+}
 
 /* Форма в модальном окне */
 .form {
-  width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.form-field {
   display: flex;
   flex-direction: column;
+  /* position: absolute; */
+  margin: 12px 40px 40px 40px;
 }
-
-.form-field label {
+.form-field {
+  position: relative;
+  /* display: inline-block;  */
+}
+.form-label {
+  display: flex;
   font-style: normal;
-  font-weight: normal;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -748,23 +816,95 @@ img {
   margin-bottom: 4px;
 }
 
-.form-field input {
+.icons-form {
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: 15px;
+  /* transform: translate(-50%, -50%); */
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(-50%);
+}
+.form-field:focus-within > .icons-form {
+  fill: var(--accent-color);
+}
+
+.form-input {
+  width: 448px;
+  height: 40px;
   margin: 0;
   padding: 0;
+  padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
+  margin-bottom: 10px;
 }
 
-.form-field input::placeholder {
+/* .form-input:last-child {
+  margin-bottom: 0;
+} */
+.form-input:focus {
+  border: 1px solid var(--accent-color);
+}
+textarea {
+  resize: none;
+}
+.form-comment:focus {
+  border: 1px solid var(--accent-color);
+}
+.form-comment {
+  height: 120px;
+  width: 100%;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  outline: none;
+  margin-bottom: 20px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-comment::placeholder {
   font-style: normal;
   font-weight: normal;
-
   line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-.form-field input[type='checkbox'] {
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.icon-checkbox {
+  display: inline-block;
   width: 16px;
   height: 15px;
+  border: 1px solid #212121;
+  border-radius: 2px;
+  margin-right: 7px;
 }
+.checkbox:checked + .icon-checkbox {
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
+  background-image: url(../images/icons.svg/check.svg);
+  background-size: contain;
+  background-origin: border-box;
+}
+.modal .button.primary {
+  margin-top: 30px;
+}
+
+/* .form-field input[type='checkbox'] {
+  width: 16px;
+  height: 15px;
+}  */
