--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,7 @@ img {
   display: flex;
   padding-top: 200px;
   padding-bottom: 200px;
+  text-align: center;
 }
 
 .dark-bg {
@@ -219,7 +220,7 @@ img {
   background-position: center;
   background-color: #2f303a;
   background-size: cover;
-  text-align: center;
+  /* text-align: center; */
 }
 .hero-title {
   color: var(--primary-white-color);
@@ -893,6 +894,10 @@ textarea {
   border-radius: 2px;
   margin-right: 7px;
 }
+.form-checkbox {
+  text-align: center;
+}
+
 .checkbox:checked + .icon-checkbox {
   border-color: var(--accent-color);
   background-color: var(--accent-color);
@@ -900,6 +905,7 @@ textarea {
   background-size: contain;
   background-origin: border-box;
 }
+
 .modal .button.primary {
   margin-top: 30px;
 }
