--- a/css/styles.css
+++ b/css/styles.css
@@ -819,12 +819,12 @@ img {
 
 .icons-form {
   position: absolute;
-  display: inline-block;
-  top: 50%;
+  /* display: inline-block; */
+  margin-top: 11px;
   left: 15px;
   /* transform: translate(-50%, -50%); */
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
 }
 .form-field:focus-within > .icons-form {
   fill: var(--accent-color);
